--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "winston": "^3.11.0",
+    "express-prom-bundle": "^6.6.0",
+    "express-session": "^1.17.3",
+    "express-winston": "^4.2.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.0",
     "connect-redis": "^7.1.0",
