--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,18 +7,18 @@ networks:
 
 services:
 
-  nodeapp1:
-    build: .
-    ports:
-      - "3000:3000"
-    depends_on:
-      - mongo-srv
-    volumes:
-      - nodeapp1-data:/app/data
-    env_file:
-      - ./.env
-    networks:
-      - my_network
+  # nodeapp1:
+  #   build: .
+  #   ports:
+  #     - "3000:3000"
+  #   depends_on:
+  #     - mongo-srv
+  #   volumes:
+  #     - nodeapp1-data:/app/data
+  #   env_file:
+  #     - ./.env
+  #   networks:
+  #     - my_network
 
   mongo-srv:
     image: mongo
