--- a/package.json
+++ b/package.json
@@ -1,35 +1,45 @@
 {
-  "name": "backend",
-  "type": "module",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node app.js",
-    "start:dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "winston": "^3.11.0",
-    "express-prom-bundle": "^6.6.0",
-    "express-session": "^1.17.3",
-    "express-winston": "^4.2.0",
-    "bcrypt": "^5.1.1",
-    "cloudinary": "^1.41.0",
-    "connect-redis": "^7.1.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "express-validator": "^7.0.1",
-    "ioredis": "^5.3.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.3",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.1",
-    "redis": "^4.6.11"
-  }
+    "name": "backend",
+    "type": "module",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "npx tsx -r tsconfig-paths/register app.ts",
+        "dev2": "npx ts-node app.ts",
+        "dev3": "nodemon app.ts",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "tsc",
+        "start": "node dist/index.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "cloudinary": "^1.41.0",
+        "connect-redis": "^7.1.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "express-prom-bundle": "^6.6.0",
+        "express-session": "^1.17.3",
+        "express-validator": "^7.0.1",
+        "express-winston": "^4.2.0",
+        "ioredis": "^5.3.2",
+        "jsonwebtoken": "^9.0.2",
+        "module-alias": "^2.2.3",
+        "mongoose": "^7.6.3",
+        "multer": "^1.4.5-lts.1",
+        "nodemon": "^3.0.1",
+        "redis": "^4.6.11",
+        "winston": "^3.11.0"
+    },
+    "devDependencies": {
+        "@types/node": "^22.10.2",
+        "ts-node": "^10.9.2",
+        "tsconfig-paths": "^4.2.0",
+        "tsx": "^4.19.2",
+        "typescript": "^5.7.2"
+    }
 }
