--- a/package.json
+++ b/package.json
@@ -36,7 +36,12 @@
         "winston": "^3.11.0"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.17",
+        "@types/express": "^5.0.0",
+        "@types/express-session": "^1.18.1",
+        "@types/ioredis": "^4.28.10",
         "@types/node": "^22.10.2",
+        "@types/redis": "^4.0.10",
         "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
         "tsx": "^4.19.2",
