--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
         "module-alias": "^2.2.3",
         "mongoose": "^7.6.3",
         "multer": "^1.4.5-lts.1",
-        "nodemon": "^3.0.1",
         "redis": "^4.6.11",
+        "tsc-alias": "^1.8.10",
         "winston": "^3.11.0"
     },
     "devDependencies": {
@@ -42,9 +42,11 @@
         "@types/ioredis": "^4.28.10",
         "@types/node": "^22.10.2",
         "@types/redis": "^4.0.10",
+        "nodemon": "^3.1.9",
         "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
         "tsx": "^4.19.2",
-        "typescript": "^5.7.2"
+        "typescript": "^5.7.2",
+        "typescript-transform-paths": "^3.5.2"
     }
 }
