--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 version: '3.8'
 
 networks:
@@ -41,7 +40,22 @@ services:
     networks:
       - my_network
 
+  minio:
+    image: minio/minio
+    command: server /data --console-address ":9001"
+    environment:
+      - MINIO_ROOT_USER=admin
+      - MINIO_ROOT_PASSWORD=admin12345
+    ports:
+      - "9000:9000" # MinIO API Port
+      - "9001:9001" # MinIO Console Port
+    volumes:
+      - minio-data:/data
+    networks:
+      - my_network
+
 volumes:
   nodeapp1-data:
   mongo-data:
+  minio-data:
 
