--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "npx tsx -r tsconfig-paths/register src/app.ts",
+        "dev": "nodemon --watch src --ext ts --exec tsx -r tsconfig-paths/register src/app.ts",
+        "dev1": "npx tsx -r tsconfig-paths/register src/app.ts",
         "dev2": "npx ts-node src/app.ts",
         "dev3": "nodemon src/app.ts",
         "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,6 +17,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/multer": "^1.4.12",
         "bcrypt": "^5.1.1",
         "cloudinary": "^1.41.0",
         "connect-redis": "^7.1.0",
@@ -28,6 +30,7 @@
         "express-winston": "^4.2.0",
         "ioredis": "^5.3.2",
         "jsonwebtoken": "^9.0.2",
+        "minio": "^8.0.2",
         "module-alias": "^2.2.3",
         "mongoose": "^7.6.3",
         "multer": "^1.4.5-lts.1",
@@ -40,6 +43,7 @@
         "@types/express": "^5.0.0",
         "@types/express-session": "^1.18.1",
         "@types/ioredis": "^4.28.10",
+        "@types/jsonwebtoken": "^9.0.7",
         "@types/node": "^22.10.2",
         "@types/redis": "^4.0.10",
         "nodemon": "^3.1.9",
