--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/multer": "^1.4.12",
         "bcrypt": "^5.1.1",
         "cloudinary": "^1.41.0",
