--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "noEmit": false,
         "esModuleInterop": true,
         "skipLibCheck": true,
+        "suppressImplicitAnyIndexErrors": true,
         "declaration": true,
         "rootDir": "./",
         "moduleResolution": "node",
