--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@types/express-session": "^1.18.1",
         "@types/ioredis": "^4.28.10",
         "@types/jsonwebtoken": "^9.0.7",
+        "@types/mongoose": "^5.11.96",
         "@types/node": "^22.10.2",
         "@types/redis": "^4.0.10",
         "nodemon": "^3.1.9",
