--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,27 +32,27 @@ services:
     networks:
       - my_network
 
-  redis:
-    image: "redis:latest"
-    command: ["redis-server", "--maxmemory", "1g"]
-    ports:
-      - "6379:6379"
-    networks:
-      - my_network
-
-  minio:
-    image: minio/minio
-    command: server /data --console-address ":9001"
-    environment:
-      - MINIO_ROOT_USER=admin
-      - MINIO_ROOT_PASSWORD=admin12345
-    ports:
-      - "9000:9000" # MinIO API Port
-      - "9001:9001" # MinIO Console Port
-    volumes:
-      - minio-data:/data
-    networks:
-      - my_network
+  # redis:
+  #   image: "redis:latest"
+  #   command: ["redis-server", "--maxmemory", "1g"]
+  #   ports:
+  #     - "6379:6379"
+  #   networks:
+  #     - my_network
+  #
+  # minio:
+  #   image: minio/minio
+  #   command: server /data --console-address ":9001"
+  #   environment:
+  #     - MINIO_ROOT_USER=admin
+  #     - MINIO_ROOT_PASSWORD=admin12345
+  #   ports:
+  #     - "9000:9000" # MinIO API Port
+  #     - "9001:9001" # MinIO Console Port
+  #   volumes:
+  #     - minio-data:/data
+  #   networks:
+  #     - my_network
 
 volumes:
   nodeapp1-data:
