--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
         "dev1": "npx tsx -r tsconfig-paths/register src/app.ts",
         "dev2": "npx ts-node src/app.ts",
         "dev3": "nodemon src/app.ts",
-        "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc",
-        "start": "node dist/index.js"
+        "start": "node dist/index.js",
+        "test": "npx tsx -r tsconfig-paths/register src/tests/userRoutes.test.ts"
     },
     "keywords": [],
     "author": "",
@@ -48,6 +48,7 @@
         "@types/mongoose": "^5.11.96",
         "@types/node": "^22.10.2",
         "@types/redis": "^4.0.10",
+        "ioredis-mock": "^8.9.0",
         "nodemon": "^3.1.9",
         "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
