--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-prom-bundle": "^6.6.0",
+        "express-rate-limit": "^7.5.0",
         "express-session": "^1.17.3",
         "express-validator": "^7.0.1",
         "express-winston": "^4.2.0",
