--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -76,28 +76,28 @@ services:
     networks:
       - my_network
 
-  logstash:
-    # image: docker.elastic.co/logstash/logstash:8.12.0
-    image: logstash:8.7.1
-    container_name: logstash
-    environment:
-      - "LS_JAVA_OPTS=-Xms256m -Xmx256m"
-    volumes:
-      - type: bind
-        source: ./logstash/pipeline
-        target: /usr/share/logstash/pipeline
-      - type: bind
-        source: ./logstash/config
-        target: /usr/share/logstash/config
-    ports:
-      - "5044:5044"
-      - "5000:5000/tcp"
-      - "5000:5000/udp"
-      - "9600:9600"
-    networks:
-      - my_network
-    depends_on:
-      - elasticsearch
+  # logstash:
+  #   # image: docker.elastic.co/logstash/logstash:8.12.0
+  #   image: logstash:8.7.1
+  #   container_name: logstash
+  #   environment:
+  #     - "LS_JAVA_OPTS=-Xms256m -Xmx256m"
+  #   volumes:
+  #     - type: bind
+  #       source: ./logstash/pipeline
+  #       target: /usr/share/logstash/pipeline
+  #     - type: bind
+  #       source: ./logstash/config
+  #       target: /usr/share/logstash/config
+  #   ports:
+  #     - "5044:5044"
+  #     - "5000:5000/tcp"
+  #     - "5000:5000/udp"
+  #     - "9600:9600"
+  #   networks:
+  #     - my_network
+  #   depends_on:
+  #     - elasticsearch
 
   kibana:
     # image: docker.elastic.co/kibana/kibana:8.12.0
